[project]
name = "fortmes.pypi"
version = "0.0.2"
license = { file = "LICENSE" }
description = "Python package for fortmes login"
readme = "README.md"
requires-python = ">=3.11"

[project.urls]
documentation = "https://github.com/fortmes/fortmes-pypi"
homepage = "https://github.com/fortmes/fortmes-pypi"
repository = "https://github.com/fortmes/fortmes-pypi"