[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool]
# You can specify your project name and version here.
name = "fortmes-pypi"
version = "0.1.0"
description = "Auth0 Device Authorization Flow and Home Assistant Integration for Fortmes"
authors = ["Bitvilag <info@powerhosting.hu>"]
license = "MIT"
readme = "README.md"

[dependencies]
# Add your project dependencies here
httpx = ">=0.18.2"

[build-system]
requires = ["setuptools>=40.9.0", "wheel"]
build-backend = "setuptools.build_meta"


[project.urls]
documentation = "https://github.com/fortmes/fortmes-pypi"
homepage = "https://github.com/fortmes/fortmes-pypi"
repository = "https://github.com/fortmes/fortmes-pypi"
